[package]
name = "pomorodo_timer"
version = "0.0.1"
authors = ["Rafi993"]
edition = "2018"
description = "Simple pomorodo timer using Rust"

[dependencies.iced]
git = "https://github.com/hecrj/iced"
branch = "master"
features = ["smol"]

[dependencies]
reqwest = { version = "0.11.4", features = ["blocking", "json"] }
serde_json = "1.0.66"
